fixed-weird-spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,9 @@ a:hover {
     transform: translate(0px, 0px);
     z-index: 100;
     padding: 10px;
+    display: none;
 }
+
 
 
 .menu ul {
@@ -195,6 +197,9 @@ a:hover {
 }
 
 @media screen and (max-width:600px){
+    .menu {
+        display: block;
+    }
     header ul {
         display: none;
     }
